# pacman-subdownloader

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md  go.mod  main.cpp  main.go  main.hpp  packages.cpp  packages.hpp
src/: main.cpp
